페이지네이션 추가, 정당구분, 최신순 구분
